# TokenBar

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Package.swift  README.md  appcast.xml  cliff.toml  install-count.json  release-notes.override.md  release-notes.override.txt
.github/workflows/: ci.yml  pages.yml  release.yml  update-install-count.yml
Fixtures/CrossCheck/: provider-quota-pace-v3.json
Sources/CTB/include/: ctb.h
Sources/CrossCheckHarness/: Format.swift  main.swift
Sources/TokenBar/: AdaptiveStyle.swift  AppDelegate.swift  BetaMigration.swift  ColorHex.swift  DashboardModel.swift  DemoData.swift  FlowLayout.swift  Format.swift  LiveRate.swift  OverlayScroller.swift  PopoverScale.swift  PopoverView.swift  QuotaSelectionPolicy.swift  SelfTest.swift  SettingsWindowController.swift  Smoke.swift  StatusItemController.swift  TrayAnimator.swift  TrayMode.swift  UsageDataSource.swift  main.swift
Sources/TokenBar/Views/: AgentIconView.swift  AgentLimitsCard.swift  AgentsView.swift  Cards.swift  DailyView.swift  DashboardTabs.swift  HourlyView.swift  HoverTooltip.swift  ModelBreakdownCard.swift  ModelsView.swift  MonthlyView.swift  OverviewView.swift  SettingsPanel.swift  (+3 more)
Sources/TokenBarCore/: AgentUsage.swift  ClientRegistry.swift  DayBars.swift  Graph.swift  ModelColors.swift  QuotaResolver.swift  UsagePace.swift  UsageStats.swift  UsageTrace.swift
assets/: icon-light.icns  icon.icns
crates/tb_core_ffi/: Cargo.toml
crates/tb_core_ffi/src/: agent_account_scope.rs  agent_antigravity.rs  agent_copilot.rs  agent_grok.rs  agent_history.rs  agent_quota_duration.rs  agent_quota_history.rs  agent_usage.rs  agents_report.rs  hourly_report.rs  lib.rs  model_report.rs  opencode_integrations.rs  usage_graph.rs  usage_tail.rs
docs/: demo-mode.md  install-count.json
docs/knowledge/: README.md  architecture.md  communication.md  current-state.md  migration-ledger.md  release.md  vendor-tokscale.md  verification.md  workflow.md
landing/: AGENTS.md
landing/og-src/: og.html  render.sh
scripts/: bundle.sh  check_knowledge.py  release_notes.sh  render_icon.swift
(+26 files in other folders)
