[package]
name = "tb_core_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
tokscale-core = { path = "../../vendor/tokscale-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# Version specs mirror the Tauri app (TokenBar-tokcat/src-tauri/Cargo.toml) so
# the ported report/agent modules compile against the same dependency surface.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
chrono = "0.4"
# App-data dir resolution (~/Library/Application Support) without Tauri APIs;
# same version line tokscale-core already pulls in.
dirs = "5"
