[package]
name = "tb_core_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
# cdylib: the WinUI/C# shell loads this over P/Invoke (tb_core_ffi.dll on
# Windows, libtb_core_ffi.dylib for the macOS-side test loop). staticlib is
# what the macOS app links via SwiftPM. Keeping both here means the Windows
# repo's vendor re-sync is a byte-identical copy (no local re-apply).
crate-type = ["cdylib", "staticlib"]

[dependencies]
tokscale-core = { path = "../../vendor/tokscale-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# Version specs mirror the Tauri app (TokenBar-tokcat/src-tauri/Cargo.toml) so
# the ported report/agent modules compile against the same dependency surface.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
fs2 = "0.4"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
chrono = "0.4"
# App-data dir resolution (~/Library/Application Support) without Tauri APIs;
# same version line tokscale-core already pulls in.
dirs = "5"
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
